--- a/index.html
+++ b/index.html
@@ -28,16 +28,15 @@
 <body>
 <div id="map"></div>
 <script>
-	var map = L.map('map').setView([31, 24], 3);
+ var mapOptions = {
+  zoom: 13,
+  center: new google.maps.LatLng(51.5,-0.11)
+}
 
-	L.tileLayer('https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw', {
-		maxZoom: 18,
-		attribution: 'Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, ' +
-			'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
-		id: 'mapbox/light-v9',
-		tileSize: 512,
-		zoomOffset: -1
-	}).addTo(map);
+var map = new google.maps.Map(document.getElementById("map"), mapOptions);
+
+var transitLayer = new google.maps.TransitLayer();
+transitLayer.setMap(map).addTo(map);
 
 
   var loc = [
