--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 var map = new google.maps.Map(document.getElementById("map"), mapOptions);
 
 var transitLayer = new google.maps.TransitLayer();
-transitLayer.setMap(map).addTo(map);
+transitLayer.setMap(map);
 
 
   var loc = [
